--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,12 +37,6 @@
   }
 }
 
-/* @media screen and (min-width: 700px) {
-  .refer-child-container {
-   
-  }
-} */
-
 @import url("https://fonts.googleapis.com/css2?family=Dosis&display=swap");
 
 .refer-child-container {
@@ -52,6 +46,7 @@
 .refer-child-header {
   display: flex;
   justify-content: center;
+  background-color: rgba(0, 199, 249, 0.355);
 }
 
 .refer-child-header-text {
@@ -63,7 +58,7 @@
 
 .kpu-difference-container {
   padding: 40px 53px;
-  background: rgb(239, 239, 239);
+  background: #e7e7e7;
 }
 
 .kpu-difference {
@@ -93,13 +88,14 @@
 }
 
 .eligible-image {
-  width: 375px;
+  width: 100%;
   height: 200px;
-  background-color: rgb(0, 199, 249);
+  background-color: rgba(0, 199, 249, 0.355);
 }
 
 .referrals-from-container {
-  margin: 40px;
+  padding: 40px;
+  background: #e7e7e7;
 }
 
 .accept-referrals-from {
@@ -109,7 +105,7 @@
 
 .referrals-list {
   padding: 0;
-  margin-left: 60px;
+  padding-left: 60px;
   list-style-type: none;
   font-size: 12pt;
 }
@@ -127,7 +123,82 @@
   padding: 10px;
 }
 
+.refer-child-button {
+  color: white;
+  background: black;
+}
+
 .honor-code-container {
   padding: 52px;
-  background: rgb(239, 239, 239);
+}
+
+@media screen and (min-width: 700px) {
+  .refer-child-header-text {
+    font-size: 30pt;
+    font-weight: bold;
+    width: 55%;
+    padding: 100px;
+  }
+  .kpu-difference-container {
+    text-align: center;
+  }
+  .kpu-difference {
+    font-size: 20pt;
+  }
+  .kpu-difference-text {
+    text-align: left;
+    font-size: 14pt;
+    padding-left: 27%;
+    width: 73%;
+  }
+  .eligible-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .eligible-text {
+    margin-top: 90px;
+    width: 50%;
+    padding-left: 18%;
+  }
+  .who-is-eligible {
+    text-align: left;
+    font-size: 20pt;
+  }
+  .eligible-children {
+    text-align: left;
+    font-size: 13pt;
+  }
+  .eligible-requirements-list {
+    text-align: left;
+    margin-left: -60px;
+    font-size: 14pt;
+  }
+  .eligible-image {
+    height: 60vh;
+    width: 50vw;
+    margin-top: -40px;
+  }
+  .accept-referrals-from {
+    font-size: 20pt;
+  }
+  .referrals-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 14pt;
+    column-gap: 7%;
+  }
+  .refer-child-button {
+    width: 15%;
+  }
+  .honor-code {
+    font-size: 20pt;
+    text-align: center;
+  }
+  .honor-code-text {
+    font-size: 14pt;
+    width: 46%;
+    margin-left: 28%;
+  }
 }
