--- a/client/src/Home.css
+++ b/client/src/Home.css
@@ -45,6 +45,7 @@ Button {
     text-align: center;
 }
 
+/* mission section */
 .home-mission {
     display: flex;
     flex-direction: column;
@@ -57,8 +58,6 @@ Button {
     margin-top: 15px;
     transform: matrix(1, 0.08, -0.07, 1, 0, 0);
 }
-
-/* mission section */
 .home-mission h1 {
     font-family: 'Dosis', sans-serif;
     font-weight: 600;
@@ -73,31 +72,30 @@ Button {
     padding: 0;
 }
 
-.learn-more-button {
-    margin: 10px 0;
-    width: 35%;
-    background-color: orange;
+.green-button {
+    background-color: #4DAC79;
     border: none;
-    font-size: 1.2rem;
 }
 
 /* How does it work section */
 .howto-expandable {
     position: relative;
     background-color: #437CE6;
-    height: 3.8rem;
+    height: 4rem;
+    width: 100%;
 }
 .home-howto h1 {
     color: white;
     font-family: Dosis, sans-serif;
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     margin: 0;
-    height: 3.8rem;
+    height: 4rem;
     font-weight: 600;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .expandable-arrow {
@@ -106,3 +104,47 @@ Button {
     top: 1.5rem;
     width: 1.5rem;
 }
+
+.orange-button {
+    margin: 10px 0;
+    width: 35%;
+    background-color: #EA6F39;
+    border: none;
+    font-size: 1rem;
+}
+
+.home-howto {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 20px;
+    align-items: center;
+}
+
+.howto-step {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items:flex-start;
+    margin-top: 20px;
+    width: 100%;
+}
+
+.howto-text {
+    width: 70%;
+    font-size: 1rem;
+}
+
+.stepNo {
+    font-family: Dosis, sans-serif;
+    font-weight: 600;
+    color: #4DAC79;
+    font-size: 1.5rem;
+    margin-left: 15px;
+}
+
+.howto-text p:first-child {
+    font-weight: 600;
+    margin: 0 0 5px 0;
+}
+
