--- a/client/src/Home.css
+++ b/client/src/Home.css
@@ -58,7 +58,7 @@ Button {
 }
 
 /* mission section */
-.home-mission {
+.home-mission, .mission-text {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -70,18 +70,18 @@ Button {
     margin-top: 15px;
     transform: matrix(1, 0.08, -0.07, 1, 0, 0);
 }
-.home-mission h1 {
-    font-family: 'Dosis', sans-serif;
-    font-weight: 600;
-    font-size: 1.5rem;
-    margin: 0;
-    padding: 0;
-}
+
 .home-mission p {
-    margin-top: 15px;
-    width: 70%;
+    font-family: 'Dosis', sans-serif;
+    margin-top: 10px;
+    width: 75%;
     font-size: .9rem;
     padding: 0;
+}
+
+#bold {
+    font-weight: 600;
+    font-size: 1rem;
 }
 
 /* How does it work section */
@@ -172,7 +172,7 @@ Button {
 /* DONATE A GIFT SECTION - quick link to wishlists page */
 .home-donate h3 {
     background: #F32E2E;
-    font-family: Paytone One, sans-serif;
+    font-family: 'Paytone One', sans-serif;
     font-size: 1.2rem;
     text-align: center;
     padding: 15px 0;
@@ -191,7 +191,7 @@ Button {
     background: #4F5CF0;
     border: none;
     color: white;
-    font-family: Paytone One, sans-serif;
+    font-family: "Paytone One", sans-serif;
 }
 
 .home-donate img, .home-refer img {
@@ -201,7 +201,7 @@ Button {
 /* REFER A CHILD SECTION - quick link to sign up page */
 .home-refer h3 {
     background: #FCA40E;
-    font-family: Paytone One, sans-serif;
+    font-family: "Paytone One", sans-serif;
     font-size: 1.2rem;
     font-size: 1.2rem;
     text-align: center;
@@ -221,7 +221,7 @@ Button {
     border: none;
     width: 30%;
     color: white;
-    font-family: Paytone One, sans-serif;
+    font-family: "Paytone One", sans-serif;
 }
 
 /* FEATURED FINDS - coming soon */
@@ -262,3 +262,101 @@ Button {
     font-size: 1.15rem;
     font-weight: 600;
 }
+
+@media screen and (min-width: 600px) {
+    /* HERO SECTION */
+    .home-hero {
+        background-position: 0;
+        height: 43rem;
+    }
+
+    .home-hero h1 {
+        font-weight: 400;
+        font-size: 3.5rem;
+    }
+    
+    .hero-button {
+        position: relative;
+        bottom: 60px;
+        width: 10%;
+    }
+
+    /* MISSION SECTION */
+
+    .home-mission {
+        flex-direction: row;
+        justify-content: flex-start;
+        padding: 50px 60px;
+    }
+
+    .home-logo {
+        width: 40%;
+    }
+
+    .mission-text {
+        width: 60%;
+    }
+
+    #bold {
+        font-size: 25px;
+        margin-bottom: 20px;
+    }
+
+    .mission-text p {
+        font-size: 19px;
+        margin: 5px;
+    }
+
+    .home-mission Button {
+        position: absolute;
+        visibility: hidden;
+    }
+
+    /* HOW TO SECTION */
+
+    .howto-arrow {
+        right: 330px;
+    }
+
+    .how-tos {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: flex-start;
+    }
+
+    .howto-step {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    .home-howto .orange-button {
+        width: 15%;
+        margin-top: 30px;
+    }
+
+    .howto-text p {
+        font-size:.8rem;
+    }
+
+    .howto-text p:first-child {
+        font-size: 1rem;
+        margin-bottom: 15px;
+    }
+
+    .home-quicklinks {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 0 60px;
+        margin-bottom: 50px;
+    }
+
+    .home-donate, .home-refer {
+        box-shadow: 0 2px 9px rgba(0, 0, 0, 0.42);
+    }
+
+    
+  }
