--- a/client/src/style/donateCard.css
+++ b/client/src/style/donateCard.css
@@ -11,6 +11,9 @@
   font-style: normal;
   font-weight: 400;
 }
+.paytoneone-normal-white-24px:hover{
+  color:#FCA40E
+}
 
 .text-i16912736483 {
   height: 34px;
@@ -254,6 +257,14 @@
   padding: 0 56px;
   background: #FCA40E;
   border-radius: 0px 0px 20px 20px;
+  position: absolute;
+  left: calc(50% - 369px/2);
+  top: 712px;
+}
+.button-yellow:hover {
+  background-color: white; 
+  color: #FCA40E;
+  border: solid #FCA40E;
 }
 
 .line-49{
