--- a/client/src/App.css
+++ b/client/src/App.css
@@ -56,98 +56,185 @@ body {
 
 @import url("https://fonts.googleapis.com/css2?family=Dosis&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
+/* REFER CHILD PAGE */
+/* Header Section */
 .refer-child-container {
   font-family: "Dosis", sans-serif;
 }
 
 .refer-child-header {
+  border-bottom: 15px solid #fca40e;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+}
+
+.refer-child-header h2 {
   display: flex;
   justify-content: center;
-  background-color: rgba(0, 199, 249, 0.355);
+  position: absolute;
+  font-family: Dosis;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 56px;
+  top: 320px;
+  left: 40.5%;
+  color: #fca40e;
 }
 
-.refer-child-header-text {
-  text-align: center;
-  font-size: 12pt;
-  width: 48%;
-  margin: 85px 60px;
+/* Need to Know Section */
+.to-know {
+  padding-top: 94px;
+  padding-left: 398px;
+  font-family: Dosis;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
 }
 
-.kpu-difference-container {
-  padding: 40px 53px;
-  background: #e7e7e7;
+.to-know-text {
+  width: 72%;
+  margin-top: 42px;
+  padding-left: 398px;
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  margin-bottom: 70px;
 }
 
-.kpu-difference {
-  text-align: center;
-  font-size: 13pt;
-}
-
+/* Eligibility Section */
 .eligible-container {
-  padding-top: 40px;
+  background: #f4f7fd;
 }
 
-.who-is-eligible {
-  text-align: center;
-  font-size: 13pt;
-}
-
-.eligible-children {
-  text-align: center;
-  font-size: 11pt;
-}
-
-.eligible-requirements-list {
-  list-style-type: none;
-  padding-left: 65px;
-  padding-bottom: 20px;
-  font-size: 12pt;
+.eligible-header-text {
+  font-family: Dosis;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  padding-left: 170px;
+  margin-bottom: 59px;
+  margin-top: 107px;
 }
 
 .eligible-image {
-  width: 100%;
-  height: 200px;
-  background-color: rgba(0, 199, 249, 0.355);
+  width: 711px;
+  height: 520px;
+}
+
+#eligible-image-one {
+  margin-left: 10px;
 }
 
 .referrals-from-container {
-  padding: 40px;
-  background: #e7e7e7;
-}
-
-.accept-referrals-from {
-  text-align: center;
-  font-size: 13pt;
-}
-
-.referrals-list {
-  padding: 0;
-  padding-left: 60px;
-  list-style-type: none;
-  font-size: 12pt;
-}
-
-.referrals-list-item {
-  background: url("Images/pow-bullet.png") no-repeat left top;
-  background-size: 35px;
-  padding-left: 40px;
-  margin: 10px 0;
-}
-
-.refer-child-button-container {
   display: flex;
+  flex-direction: row;
+  background: #f4f7fd;
+}
+
+.eligible-requirements-list {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  padding-left: 245px;
+  line-height: 180%;
+}
+
+/* What to Expect Section */
+.what-to-expect-container h2 {
+  font-family: Dosis;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  margin-bottom: 48px;
+  margin-top: 74px;
+  text-align: center;
+}
+
+.what-to-expect {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   justify-content: center;
-  padding: 10px;
+  justify-content: space-around;
+  margin: 0px 100px;
+}
+
+.expect-step {
+  width: 291px;
+  height: 256px;
+  text-align: center;
+}
+
+.expect-step p:first-child {
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  margin-top: 16px;
+}
+
+.expect-step {
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  margin-bottom: 42px;
+}
+
+#expect-text-one {
+  padding-top: 37px;
+}
+
+#expect-text-two {
+  padding-top: 37px;
+}
+
+#expect-text-three {
+  width: 295px;
 }
 
 .refer-child-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Paytone One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
   color: white;
-  background: black;
+  width: 230px;
+  height: 64px;
+  background: #4dac79;
+  border-radius: 8px;
+  border: 2px solid #4dac79;
+  margin-left: 606px;
+  margin-top: 65px;
+}
+
+.refer-child-button:hover {
+  background: white;
+  color: #4dac79;
+  border: 2px solid #4dac79;
+  transition: all 500ms ease;
+  text-decoration: none;
 }
 
 .honor-code-container {
-  padding: 52px;
+  font-family: Open Sans;
+  font-style: normal;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+}
+
+.honor-code-text {
+  width: 100%;
+  margin-top: 58px;
+  margin-bottom: 63px;
+  width: 679px;
 }
 
 @media screen and (min-width: 700px) {
@@ -157,31 +244,13 @@ body {
     width: 55%;
     padding: 100px;
   }
-  .kpu-difference-container {
-    text-align: center;
-  }
-  .kpu-difference {
-    font-size: 20pt;
-  }
-  .kpu-difference-text {
-    text-align: left;
-    font-size: 14pt;
-    padding-left: 27%;
-    width: 73%;
-  }
   .eligible-container {
     display: flex;
     flex-direction: row;
     justify-content: center;
   }
   .eligible-text {
-    margin-top: 90px;
     width: 50%;
-    padding-left: 18%;
-  }
-  .who-is-eligible {
-    text-align: left;
-    font-size: 20pt;
   }
   .eligible-children {
     text-align: left;
@@ -191,11 +260,6 @@ body {
     text-align: left;
     margin-left: -60px;
     font-size: 14pt;
-  }
-  .eligible-image {
-    height: 60vh;
-    width: 50vw;
-    margin-top: -40px;
   }
   .accept-referrals-from {
     font-size: 20pt;
@@ -210,17 +274,9 @@ body {
   .refer-child-button {
     width: 15%;
   }
-  .honor-code {
-    font-size: 20pt;
-    text-align: center;
-  }
-  .honor-code-text {
-    font-size: 14pt;
-    width: 46%;
-    margin-left: 28%;
-  }
 }
 
+/* REFFERRAL FORM PAGE */
 .referral-form {
   letter-spacing: 0em;
   text-align: center;
