added styles to confirm purchase modal and fixed the allignment of buttons in the modals

--- a/client/src/style/confirmModal.css
+++ b/client/src/style/confirmModal.css
@@ -38,197 +38,7 @@
   min-width: 89px;
   text-align: center;
 }
-.confirm-flex-col {
-  align-items: flex-start;
-  align-self: center;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 86.42px;
-  margin-left: 86px;
-  min-height: 200px;
-  width: 114px;
-}
-.confirm-flex-col-1 {
-  align-items: flex-start;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: -0.12px;
-  margin-left: 180px;
-  min-height: 453px;
-  width: 57px;
-}
-.confirm-flex-col-2 {
-  align-items: flex-end;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 25.14px;
-  min-height: 319px;
-  width: 114px;
-}
-.confirm-flex-col-3 {
-  align-items: center;
-  align-self: flex-end;
-  display: flex;
-  flex-direction: column;
-  margin-left: 184px;
-  min-height: 170px;
-  width: 102px;
-}
-.confirm-flex-row {
-  align-items: flex-start;
-  display: flex;
-  height: 171px;
-  margin-top: 60px;
-  min-width: 466px;
-}
-.confirm-flex-row-1 {
-  align-items: flex-start;
-  align-self: center;
-  display: flex;
-  margin-right: 43.63px;
-  min-width: 377px;
-}
-.confirm-frame {
-  align-items: flex-end;
-  display: flex;
-  margin-bottom: -0.0px;
-  overflow: hidden;
-  width: 1115px;
-}
-.confirm-group {
-  height: 1047px;
-  left: 170px;
-  position: absolute;
-  top: -122px;
-  transform: rotate(-90.00deg);
-  width: 758px;
-}
-.confirm-group-1 {
-  align-items: flex-start;
-  /* background-image: url(vector-44.svg); */
-  background-size: 100% 100%;
-  display: flex;
-  height: 106px;
-  min-width: 102px;
-  padding: 12.7px 11.1px;
-}
-.confirm-group-10 {
-  align-items: flex-start;
-  display: flex;
-  height: 58px;
-  justify-content: center;
-  margin-left: 12px;
-  margin-top: 3.03px;
-  min-width: 57px;
-}
-.confirm-group-11 {
-  height: 725px;
-  left: 248px;
-  position: absolute;
-  top: -5px;
-  /* transform: rotate(-90.00deg); */
-  width: 651px;
-}
-.confirm-group-12 {
-  align-items: flex-start;
-  display: flex;
-  flex-direction: column;
-  left: 0px;
-  min-height: 420px;
-  position: absolute;
-  top: 10px;
-  width: 542px;
-}
-.confirm-group-13 {
-  align-items: flex-start;
-  align-self: center;
-  display: flex;
-  height: 48px;
-  justify-content: center;
-  margin-left: 69px;
-  margin-top: 22.72px;
-  min-width: 50px;
-}
-.confirm-group-14 {
-  align-items: flex-start;
-  display: flex;
-  height: 63px;
-  justify-content: center;
-  min-width: 61px;
-}
-.confirm-group-15 {
-  align-items: flex-start;
-  display: flex;
-  height: 385px;
-  left: 14px;
-  min-width: 539px;
-  position: absolute;
-  top: 23px;
-}
-.confirm-group-2 {
-  height: 1116px;
-  left: 186px;
-  position: absolute;
-  top: -185px;
-  transform: rotate(-90.00deg);
-  width: 745px;
-}
-.group-3 {
-  height: 1029px;
-  left: 187px;
-  position: absolute;
-  top: -126px;
-  transform: rotate(-90.00deg);
-  width: 753px;
-}
-.confirm-group-4 {
-  align-items: flex-start;
-  align-self: center;
-  display: flex;
-  height: 35px;
-  justify-content: center;
-  margin-bottom: 13.36px;
-  margin-left: 168px;
-  min-width: 36px;
-}
-.confirm-group-5 {
-  align-items: flex-start;
-  display: flex;
-  height: 53px;
-  justify-content: center;
-  margin-left: 19.68px;
-  margin-top: 10px;
-  min-width: 52px;
-}
-.confirm-group-6 {
-  align-items: flex-start;
-  align-self: flex-end;
-  display: flex;
-  height: 58px;
-  justify-content: center;
-  margin-right: 0.0px;
-  margin-top: 25px;
-  min-width: 57px;
-}
-.confirm-group-7 {
-  align-items: flex-end;
-  display: flex;
-  height: 453px;
-  justify-content: flex-end;
-  left: 14px;
-  min-width: 551px;
-  position: absolute;
-  top: 0px;
-}
-.group-8 {
-  align-items: flex-start;
-  display: flex;
-  height: 453px;
-  left: 0px;
-  min-width: 565px;
-  position: absolute;
-  top: 0px;
-}
+
 .confirm-group-83 {
   align-items: flex-start;
   display: flex;
@@ -238,24 +48,7 @@
   position: absolute;
   top: 208px;
 }
-.confirm-group-84 {
-  align-items: flex-end;
-  display: flex;
-  height: 780px;
-  justify-content: flex-end;
-  left: -168px;
-  min-width: 1115px;
-  position: absolute;
-  top: 168px;
-  transform: rotate(90.00deg);
-}
-.confirm-group-9 {
-  align-items: flex-start;
-  display: flex;
-  height: 104px;
-  justify-content: center;
-  min-width: 102px;
-}
+
 .confirm-overlap-group {
   height: 1115px;
   margin-left: -81px;
@@ -263,114 +56,7 @@
   position: relative;
   width: 780px;
 }
-.confirm-overlap-group-1 {
-  height: 453px;
-  position: relative;
-  width: 565px;
-}
-.confirm-overlap-group1 {
-  height: 780px;
-  margin-bottom: -0.27px;
-  position: relative;
-  width: 1116px;
-}
-.confirm-overlap-group10 {
-  height: 144px;
-  position: relative;
-  width: 45px;
-}
-.confirm-overlap-group11 {
-  height: 64px;
-  position: relative;
-  width: 114px;
-}
-.confirm-overlap-group12 {
-  align-self: flex-end;
-  height: 94px;
-  margin-top: 215px;
-  position: relative;
-  width: 44px;
-}
-.confirm-overlap-group3 {
-  height: 386px;
-  margin-top: -0.44px;
-  position: relative;
-  width: 540px;
-}
-.confirm-overlap-group3-1 {
-  align-items: flex-end;
-  /* background-image: url(vector-36.svg); */
-  background-size: 100% 100%;
-  display: flex;
-  height: 59px;
-  margin-top: -0.38px;
-  min-width: 58px;
-  padding: 9.7px 9.3px;
-}
-.confirm-overlap-group4 {
-  align-items: flex-end;
-  /* background-image: url(vector-38.svg); */
-  background-size: 100% 100%;
-  display: flex;
-  height: 59px;
-  margin-top: -0.38px;
-  min-width: 58px;
-  padding: 9.8px 8.8px;
-}
-.confirm-overlap-group5 {
-  align-items: flex-end;
-  /* background-image: url(vector-40.svg); */
-  background-size: 100% 100%;
-  display: flex;
-  height: 105px;
-  justify-content: flex-end;
-  margin-top: -0.38px;
-  min-width: 104px;
-  padding: 15.9px 15.5px;
-}
-.confirm-overlap-group6 {
-  align-items: flex-start;
-  /* background-image: url(vector-42.svg); */
-  background-size: 100% 100%;
-  display: flex;
-  height: 49px;
-  justify-content: flex-end;
-  margin-top: -0.54px;
-  min-width: 51px;
-  padding: 8.7px 9.8px;
-}
-.confirm-overlap-group7 {
-  align-items: flex-start;
-  /* background-image: url(vector-46.svg); */
-  background-size: 100% 100%;
-  display: flex;
-  height: 55px;
-  justify-content: flex-end;
-  margin-top: -0.79px;
-  min-width: 53px;
-  padding: 10.3px 9.1px;
-}
-.confirm-overlap-group8 {
-  align-items: flex-end;
-  /* background-image: url(vector-48.svg); */
-  background-size: 100% 100%;
-  display: flex;
-  height: 64px;
-  justify-content: flex-end;
-  margin-top: -0.33px;
-  min-width: 61px;
-  padding: 9.4px 8.1px;
-}
-.confirm-overlap-group9 {
-  align-items: flex-end;
-  /* background-image: url(vector-50.svg); */
-  background-size: 100% 100%;
-  display: flex;
-  height: 36px;
-  margin-top: -0.38px;
-  min-width: 37px;
-  padding: 5.9px 6.4px;
-}
+
 .confirm-purchase-modal-flow-3 {
   align-items: flex-start;
   background-color: rgba(244,247,253,1.0);
@@ -378,6 +64,7 @@
   height: 777px;
   overflow: hidden;
   width: 633px;
+  background-image: url(../Images/group84.png);
 }
 .confirm-text-1 {
   color: rgba(0,0,0,1.0);
@@ -389,131 +76,6 @@
   text-align: center;
   top: 663px;
   width: 478px;
-}
-.confirm-vector {
-  height: 26px;
-  margin-left: 4.89px;
-  margin-top: 150px;
-  width: 109px;
-}
-.confirm-vector-1 {
-  height: 45px;
-  width: 43px;
-}
-.confirm-vector-10 {
-  height: 94px;
-  left: 0px;
-  position: absolute;
-  top: 0px;
-  width: 43px;
-}
-.confirm-vector-11 {
-  height: 36px;
-  left: 1px;
-  position: absolute;
-  top: 0px;
-  width: 68px;
-}
-.confirm-vector-12 {
-  height: 23px;
-  width: 34px;
-}
-.confirm-vector-13 {
-  height: 1px;
-  left: 550px;
-  position: absolute;
-  top: 376px;
-  transform: rotate(-90.00deg);
-  width: 1px;
-}
-.confirm-vector-14 {
-  height: 39px;
-  width: 38px;
-}
-.confirm-vector-15 {
-  height: 80px;
-  width: 77px;
-}
-.confirm-vector-16 {
-  height: 30px;
-  width: 31px;
-}
-.confirm-vector-17 {
-  height: 23px;
-  width: 24px;
-}
-.confirm-vector-18 {
-  height: 48px;
-  left: 17px;
-  position: absolute;
-  top: 12px;
-  width: 27px;
-}
-.confirm-vector-19 {
-  height: 72px;
-  width: 71px;
-}
-.confirm-vector-2 {
-  height: 102px;
-  left: 0px;
-  position: absolute;
-  top: 42px;
-  width: 45px;
-}
-.confirm-vector-3 {
-  height: 39px;
-  width: 39px;
-}
-.confirm-vector-4 {
-  height: 342px;
-  left: 8px;
-  position: absolute;
-  top: 32px;
-  width: 532px;
-}
-.confirm-vector-5 {
-  height: 50px;
-  left: 0px;
-  position: absolute;
-  top: 14px;
-  width: 114px;
-}
-.confirm-vector-6 {
-  height: 45px;
-  margin-right: 0.13px;
-  margin-top: 209px;
-  width: 43px;
-}
-.confirm-vector-7 {
-  height: 386px;
-  left: 0px;
-  position: absolute;
-  top: 0px;
-  width: 502px;
-}
-.confirm-vector-8 {
-  height: 61px;
-  left: 9px;
-  position: absolute;
-  top: 0px;
-  width: 19px;
-}
-.confirm-vector-9 {
-  height: 34px;
-  width: 33px;
-}
-.confirm-youre-a-star {
-  color: var(--royal-blue);
-  font-family: var(--font-family-dosis);
-  font-size: var(--font-size-50_2px);
-  font-weight: 600;
-  height: 57px;
-  left: 75px;
-  letter-spacing: 0.00px;
-  position: absolute;
-  text-align: center;
-  top: 187px;
-  width: 401px;
 }
 
 @import url("https://fonts.googleapis.com/css?family=Dosis:400,500,600|Open+Sans:400,700,600,800|Paytone+One:400|Libre+Franklin:600|Mulish:400,600");
