--- a/client/src/style/purchaseModal.css
+++ b/client/src/style/purchaseModal.css
@@ -276,9 +276,7 @@
   align-self: center;
   background-color: var(--smashed-pumpkin);
   border-radius: 8px;
-  display: flex;
   height: 51px;
-  justify-content: flex-end;
   margin-top: 20fpx;
   min-width: 147px;
   padding: 0 27.4px;
@@ -289,9 +287,7 @@
   align-self: center;
   background-color: #4DAC79;
   border-radius: 8px;
-  display: flex;
   height: 51px;
-  justify-content: flex-end;
   margin-top: 20fpx;
   min-width: 147px;
   padding: 0 27.4px;
@@ -649,4 +645,17 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.single-orange-button {
+  display:contents
+}
+
+.flex-parent {
+  display: flex;
+  width: 100%;
+}
+
+.jc-center {
+  justify-content: space-between;
 }
