--- a/client/src/App.css
+++ b/client/src/App.css
@@ -696,3 +696,36 @@ input .child-form-fields {
   background: #fca40e;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
 }
+
+.dash-edit-account {
+  font-family: Dosis;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 40px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+.dash-edit-headers {
+  font-family: Open Sans;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.dash-edit-labels {
+  font-family: Open Sans;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 25px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.dash-grn-border {
+  border-top: 1px solid #4dac79;
+  border-bottom: 1px solid #4dac79;
+}
