--- a/client/src/style/donatePage.css
+++ b/client/src/style/donatePage.css
@@ -6,7 +6,7 @@
 }
 .overlap-group {
   align-items: flex-end;
-  background-image: url(../Images/pexels-pixabay-207666.png);
+  background-image: url(../Images/wishlist.png);
   background-size: 100% 100%;
   display: flex;
   height: 368px;
